# Universal-Print

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  bootstrap.sh
.github/workflows/: cmake.yml
cmake/: Findglog.cmake
include/helloworld/: argparser.hpp  common.hpp  cxxdebug.hpp  debug.hpp  define.hpp  helloworld.hpp  smart.hpp
include/helloworld/argparser/: all.hpp  argparser.hpp  common.hpp  debug.hpp  flag-manager.hpp  flag.hpp
include/up/: pre.hpp
src/: helloworld.cpp
test/: CMakeLists.txt  naive-test.cpp
unittest/: CMakeLists.txt  customized.cpp  primitives.cpp  trait.h  unittest.cpp
